<resources>
    <string name="app_name">EduConnect</string>
    <string name="log_in_to_your_account">LOG IN TO YOUR ACCOUNT</string>
    <string name="email">Email</string>
    <string name="john_doe_mail_com">john-doe@mail.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register_here"><u>Register Here!</u></string>
    <string name="register_your_account">REGISTER YOUR ACCOUNT</string>
    <string name="name">Name</string>
    <string name="john_doe">John Doe</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here"><u>Login here!</u></string>
    <string name="we_help_you_connect_with_people">We help you connect with people</string>
    <string name="logout">Logout</string>
    <string name="friend_list">Friend List</string>
    <string name="my_profile">My Profile</string>
    <string name="let_s_connect">Let’s Connect!</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="jobs">Jobs</string>
    <string name="connections">Connections</string>
    <string name="search_for_jobs">Search for jobs by its position</string>
    <string name="job_guru_fisika"><b>Job:</b> %s</string>
    <string name="city_depok"><b>City:</b> %s</string>
    <string name="search_for_people">Search for people</string>
    <string name="profession_dosen_akuntansi"><b>Profession:</b> %s</string>
    <string name="friends">Friends</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="detail_information">Detail Information</string>
    <string name="area_jawa_barat"><b>Area: </b>%s</string>
    <string name="skill_mathematics"><b>Skill:</b> %s</string>
    <string name="country_indonesia"><b>Country:</b> %s</string>
    <string name="back_to_home">Back to home</string>
    <string name="back_to_joblist">Back to Jobs</string>
    <string name="back_to_friendlist">Back to Connections</string>
    <string name="job_detail">Job Detail</string>
    <string name="salary_rp3_000_000"><b>Salary: Rp</b>%s</string>
    <string name="apply_now">Apply Now</string>
    <string name="your_profile">Your Profile</string>
    <string name="name_heri_susanto"><b>Name:</b> %s</string>
    <string name="email_herisusanto_gmail_com"><b>Email:</b> %s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_your_profile_here">Edit your profile here!</string>
    <string name="save_profile">Save Profile</string>
    <string name="profession">Profession</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="unemployed">Unemployed</string>
    <string name="depok">Depok</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="indonesia">Indonesia</string>
    <string name="country">Country</string>
    <string name="science">Science</string>
    <string name="skills">Skills</string>
    <string name="job_recommendation">Job Recommendation</string>
    <string name="my_job_recommendation">My Job Recommendation</string>
</resources>