<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.friendDetail.FriendDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/job_detail"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="28dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Sekolah Mentari Bangsa"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profession_dosen_akuntansi"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_depok"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area_jawa_barat"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_indonesia"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salary_rp3_000_000"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill_mathematics"
                android:textSize="15sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="95dp"
            android:minHeight="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/apply_now"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="95dp"
            android:minHeight="32dp"
            android:layout_marginTop="15dp"
            android:text="@string/back_to_joblist"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"/>
</LinearLayout>